:# ChangeLog for sys-devel/makeheaders
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2011; Michael Weber <xmw@gentoo.org> +makeheaders-0_p4.ebuild,
  +metadata.xml:
  Moved to dev-util

  16 Jul 2011; Michael Weber <xmw@gentoo.org> makeheaders-0_p4.ebuild:
  fixed src_unpack

*makeheaders-0_p4 (16 Jul 2011)

  16 Jul 2011; Michael Weber <xmw@gentoo.org> +makeheaders-0_p4.ebuild,
  +metadata.xml:
  Initial import
