@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*makeheaders-0_p4-r1 (03 Aug 2011)
+
+  03 Aug 2011; Michael Weber <xmw@gentoo.org> -makeheaders-0_p4.ebuild,
+  +makeheaders-0_p4-r1.ebuild:
+  Revbump to add documentation and improve 
+
   03 Aug 2011; Michael Weber <xmw@gentoo.org> +makeheaders-0_p4.ebuild,
   +metadata.xml:
   Moved to dev-util
